--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tribute Page</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <main id="main">
+      <h1 id="title">Nelson Rolihlahla Mandela</h1>
+      <p>The first president of South Africa</p>
+      <figure id="img-div">
+        <img id="image" src="images/Nelson.jpg" alt="Nelson Mandela's image" />
+        <figcaption id="img-caption">
+          <i>Nelson Rolihlahla Mandela</i>
+        </figcaption>
+      </figure>
+
+      <div id="tribute-info">
+        <h2>Here's the tribute of Nelson Rolihlahla Mandela</h2>
+        <ul>
+            <li><span id="bold">1918:</span> In the small village of Mvezo, South Africa, Nelson Rolihlahla Mandela was born on July 18th. Little did the world know that this child would grow up to become a symbol of hope and resilience.</li>
+            <li><span id="bold">1943:</span> Mandela joined the African National Congress (ANC) and embarked on a lifelong journey to combat racial discrimination, setting the stage for his leadership in the fight against apartheid.</li>
+            <li><span id="bold">1961:</span> Nelson Mandela helped establish Umkhonto we Sizwe, the armed wing of the ANC, as peaceful resistance gave way to a more militant struggle.</li>
+            <li><span id="bold">1964:</span> Sentenced to life in prison for his anti-apartheid activities, Mandela's imprisonment became a global symbol of resistance to oppression.</li>
+            <li><span id="bold">1990:</span> After 27 years in prison, Nelson Mandela was released, signaling a new era of hope and reconciliation in South Africa.</li>
+            <li><span id="bold">1993:</span> Mandela, along with F.W. de Klerk, received the Nobel Peace Prize for their efforts to peacefully dismantle apartheid and establish a multiracial democracy.</li>
+            <li><span id="bold">1994:</span> In a historic election, Nelson Mandela became South Africa's first black president, ending apartheid and championing unity and reconciliation.</li>
+            <li><span id="bold">1999:</span> Stepping down as president, Mandela ensured a peaceful transition of power and continued his work for global peace and human rights.</li>
+            <li><span id="bold">2013:</span> On December 5th, the world bid farewell to Nelson Mandela. His legacy lives on, inspiring generations to stand up for justice and equality.</li>
+            <p>Nelson Mandela's life is a testament to the enduring power of resilience, forgiveness, and the relentless pursuit of justice. His legacy continues to shine as a beacon of hope for all.</p>
+        </ul>
+      </div>
+      <div>
+        <h3>You can read more about this ambitious leader on his <a href="https://en.wikipedia.org/wiki/Nelson_Mandela" target="_blank">Wikipedia entry</a>.</h3>
+      </div>
+    </main>
+  </body>
 </html>
