--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
     <main id="main">
       <h1 id="title">Nelson Rolihlahla Mandela</h1>
-      <p>The first president of South Africa</p>
+      <p id="description">The first president of South Africa</p>
       <figure id="img-div">
         <img id="image" src="images/Nelson.jpg" alt="Nelson Mandela's image" />
         <figcaption id="img-caption">
-          <i>Nelson Rolihlahla Mandela</i>
+          Nelson Rolihlahla Mandela
         </figcaption>
       </figure>
 
@@ -32,9 +32,9 @@
             <p>Nelson Mandela's life is a testament to the enduring power of resilience, forgiveness, and the relentless pursuit of justice. His legacy continues to shine as a beacon of hope for all.</p>
         </ul>
       </div>
-      <div>
-        <h3>You can read more about this ambitious leader on his <a href="https://en.wikipedia.org/wiki/Nelson_Mandela" target="_blank">Wikipedia entry</a>.</h3>
-      </div>
+      
+        <h3 id="below">You can read more about this ambitious leader on his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Nelson_Mandela" target="_blank">Wikipedia entry</a>.</h3>
+      
     </main>
   </body>
 </html>
